--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <picture class="pictures">
                 <img
                   id="alexander-picture"
-                  src=""
+                  src="./pictures/DevOps.webp"
                   alt=""
                   class="preview-picture"
                 />
