team data added

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
             </div>
           </div>
         </main>
+        <footer>
+          <div>Contact us: info@ultimate-team.com</div>
+          <div>© 2024 Ultimate Team. All rights reserved.</div>
+        </footer>
       </div>
       <div id="team-member-info" class="hide">
         <header>
