founder role changed

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="name-position-preview">
               <p class="preview-name">Stanislav Borysenko</p>
-              <p class="preview-position">Software Engineer</p>
+              <p class="preview-position">Founder</p>
             </div>
           </div>
         </main>
